Implemented poll particiation list page
